# ghost-as-a-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: .code-reviewer-subagent.agent.md  .implementer-subagent.agent.md  .implementer.agent.md  .plan.agent.md  .planner-subagent.agent.md  .planner.agent.md  .reviewer.agent.md  code-reviewer-subagent.agent.md  conductor.agent.md  implementer-subagent.agent.md  planner-subagent.agent.md
.github/instructions/: agents.instructions.md  architectural-standards.instructions.md  core-standards.instructions.md  development-standards.instructions.md  skill.instructions.md  skills.instructions.md  testing-standards.instructions.md
.github/prompts/: commit.prompt.md
.github/skills/scaffold-repository/: SKILL.md
.github/skills/scaffold-service/: SKILL.md
.github/skills/scaffold-utility/: SKILL.md
app/: __init__.py  exceptions.py  models.py  settings.py
app/repositories/excuse_generator/: __init__.py  excuse_repository.py  interface.py
app/repositories/excuse_repository/: __init__.py  interface.py
app/services/excuse_generator/: __init__.py  interface.py
app/utilities/: __init__.py
plans/: complete-ghost-service-phase-1-complete.md  complete-ghost-service-phase-2-complete.md  complete-ghost-service-plan.md  refactor-excuse-agent-phase-1-complete.md  refactor-excuse-agent-plan.md
tests/: conftest.py  test_exceptions.py  test_lambda_handler.py  test_models.py  test_settings.py
tests/utilities/: __init__.py  conftest.py
(+52 files in other folders)
