[project]
name = "ghost-as-a-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aws-lambda-powertools>=3.24.0",
    "pydantic>=2.12.5",
    "pydantic-ai-slim[google]",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.14",
]

[tool.setuptools]
packages = ["app"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
